--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,30 @@
 trigger:
 - main
 
+parameters:
+- name: languages
+  displayName: 'Select languages for SDK generation'
+  type: object
+  default:
+    - 'csharp'
+    - 'java'
+  values:
+    - 'csharp'
+    - 'java'
+    - 'python'
+    - 'typescript'
+    - 'ruby'
+    - 'php'
+
 pool:
   vmImage: ubuntu-latest
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+stages:
+- stage: 'Validate Spec Stage'
+  jobs:
+  - job: ValidateOpenAPISpec
+    steps:
+    - script: |
+        # Assuming the OpenAPI spec is named 'openapi.yaml' and located at the root
+        curl -X POST --data-binary @openapi.yaml -H 'Content-Type: application/yaml' https://validator.swagger.io/validator/debug
+      displayName: 'Validate OpenAPI Specification'
