--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,5 +33,6 @@ stages:
       displayName: 'Display openapi.yml Content'    
     - script: |
         # Assuming the OpenAPI spec is named 'openapi.yaml' and located at the root
-        curl -X POST --data-binary @openapi.yaml -H 'Content-Type: application/yaml' https://validator.swagger.io/validator/debug
+        pip install yq
+        yq -o=json openapi.yaml | curl -X POST -H 'Content-Type: application/json' --data-binary @- https://validator.swagger.io/validator/debug
       displayName: 'Validate OpenAPI Specification'
