--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,19 @@ parameters:
   displayName: 'Generate TypeScript SDK'
   type: boolean
   default: false
+- name: generateTypeScript
+  displayName: 'Generate TypeScript SDK'
+  type: boolean
+  default: false
+- name: generatePHP
+  displayName: 'Generate PHP SDK'
+  type: boolean
+  default: false
+- name: generateRuby
+  displayName: 'Generate Ruby SDK'
+  type: boolean
+  default: false
+
 
 pool:
   vmImage: ubuntu-latest
