--- a/generate-sdk-template.yml
+++ b/generate-sdk-template.yml
@@ -14,7 +14,7 @@ jobs:
       # Install Speakeasy CLI
       curl -fsSL https://speakeasyapi.dev/install.sh | sh
       speakeasy -v
-    displayName: 'Install Speakeasy CLI
+    displayName: 'Install Speakeasy CLI'
     
   - script: |
       speakeasy generate sdk --lang ${{ parameters.language }} --input openapi.json --output ./sdks/${{ parameters.language }}
