--- a/generate-sdk-template.yml
+++ b/generate-sdk-template.yml
@@ -12,10 +12,9 @@ jobs:
   steps:
   - template: generate-sdk-template.yml
   - template: clone-repo.yml
-    env:
-      languageName: $(language)
-      repoUrl: "docuTest-${{}}-sdk-private"
-      targetDirectory: "private-sdks/docuTest-${{}}-sdk-private"
+      env:
+      repoUrl: "docuTest-${{parameters.language}}-sdk-private"
+      targetDirectory: "private-sdks/docuTest-${{parameters.language}}-sdk-private"
   - script: |
       speakeasy run
     displayName: 'Generate ${{ parameters.language }} SDK'
