--- a/install-speakeasy-cli.yml
+++ b/install-speakeasy-cli.yml
@@ -2,5 +2,6 @@
 steps:
 - script: |
     # Install Speakeasy CLI
-    curl -fsSL https://speakeasyapi.dev/install.sh | sh
+    curl -fsSL https://go.speakeasy.com/cli-install.sh | sh
+    speakeasy -v
   displayName: 'Install Speakeasy CLI'
