--- a/generate-sdk-template.yml
+++ b/generate-sdk-template.yml
@@ -16,6 +16,7 @@ jobs:
       repoUrl: "docuTest-${{parameters.language}}-sdk-private"
       targetDirectory: "private-sdks/docuTest-${{parameters.language}}-sdk-private"
   - script: |
+      cd "private-sdks/docuTest-${{parameters.language}}-sdk-private"
       speakeasy run
     displayName: 'Generate ${{ parameters.language }} SDK'
 
