fix: correct directory path for SDK generation script

--- a/generate-sdk-template.yml
+++ b/generate-sdk-template.yml
@@ -21,7 +21,7 @@ jobs:
     displayName: 'Generate ${{ parameters.language }} SDK'
 
   - script: |
-      cd sdk-repo
+      cd docusign-test-js-sdk
 
       git config user.name "automation-bot"
       # this is test email, replace with actual email
