--- a/clone-repo.yml
+++ b/clone-repo.yml
@@ -11,6 +11,6 @@ parameters:
 steps:
   - script: |
       echo "Cloning github.com/${{ parameters.orgName }}/${{ parameters.repoName }} into ${{ parameters.targetDirectory }}"
-
-      git clone --progress --verbose https://$(GITHUB_PAT)@github.com/${{ parameters.orgName }}/${{ parameters.repoName }}.git {{ parameters.targetDirectory }}
+      echo "git clone --progress --verbose \"https://$(GITHUB_PAT)@github.com/${{ parameters.orgName }}/${{ parameters.repoName }}.git\" \"${{ parameters.targetDirectory }}\""
+      git clone --progress --verbose "https://$(GITHUB_PAT)@github.com/${{ parameters.orgName }}/${{ parameters.repoName }}.git" "{{ parameters.targetDirectory }}"
     displayName: "Clone ${{ parameters.orgName }}/${{ parameters.repoName }} Repo"
