fix: streamline PR status retrieval by removing unnecessary details and improving monitoring logic

--- a/generate-sdk-template.yml
+++ b/generate-sdk-template.yml
@@ -93,14 +93,6 @@ jobs:
           exit 1
         fi
 
-        # Retrieve PR details
-        pr_details=$(gh pr view "$pr_number" --repo "$repo")
-        echo "PR Details: $pr_details"
-
-        # Extract the status line
-        status_line=$(echo "$pr_details" | grep -i 'Status:')
-        echo "Status Line: $status_line"
-
         # Retrieve PR status in JSON format
         pr_status=$(gh pr view "$pr_number" --repo "$repo" --json state,mergedAt --jq '.state + " " + (.mergedAt // "")')
         echo "PR Status: $pr_status"
@@ -110,16 +102,15 @@ jobs:
         echo "State: $state"
         echo "Merged At: $merged_at"
 
-        # Determine the status
-        if echo "$status_line" | grep -iq 'Merged'; then
+        if [[ "$state" == "MERGED" || -n "$merged_at" ]]; then
           echo "✅ PR #$pr_number has been merged!"
           exit 0
-        elif echo "$status_line" | grep -iq 'Closed'; then
+        elif [[ "$state" == "CLOSED" ]]; then
           echo "❌ PR #$pr_number was closed without merging."
           exit 1
         else
-          echo "⏳ PR #$pr_number is still open. Checking again in 30 seconds..."
-          sleep 30
+          echo "⏳ PR #$pr_number is still open."
+          # Continue monitoring or handle accordingly
         fi
       done
     displayName: 'Create Pull Request on GitHub'
