--- a/generate-sdk-template.yml
+++ b/generate-sdk-template.yml
@@ -109,8 +109,8 @@ jobs:
           echo "❌ PR #$pr_number was closed without merging."
           exit 1
         else
-          echo "⏳ PR #$pr_number is still open."
-          # Continue monitoring or handle accordingly
+          echo "⏳ PR #$pr_number is still open. Checking again in 30 seconds..."
+          sleep 30
         fi
       done
     displayName: 'Create Pull Request on GitHub'
